# ledger

./: .eslintrc.cjs  .gitignore  PARSER_BUG_ANALYSIS.md  README.md  US2_VALIDATION_HANDOFF.md  US2_VALIDATION_SUMMARY.md  VALIDATION_US2_REPORT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/rules/: specify-rules.mdc
.github/workflows/: test.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docs/adr/: 0001-tauri-2-desktop-local-only.md  0002-vault-in-memory-state.md  0003-frontend-backend-tauri-commands.md  0004-data-model-persistence.md  0005-markdown-list-parsing.md  0006-query-and-search-no-index.md  0007-session-persistence.md  0008-frontend-vanilla-typescript.md  0009-path-validation-vault-containment.md  0010-logging-tracing.md  README.md
docs/plans/: 2025-02-25-markdown-app-design.md  2025-02-25-shadcn-svelte-styling-design.md
e2e/: README.md  wdio.conf.js
e2e/specs/: flows.spec.js  open-folder.spec.js
src/: appState.ts  main.ts  main.tsx  style.css  styles.css  tauriClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  path_utils.rs  test_debug.rs
src-tauri/src/commands/: file.rs  log.rs  mod.rs  parse.rs  query.rs  search.rs  session.rs  vault.rs
src-tauri/src/markdown/: mod.rs
src-tauri/tests/: file_crud_integration.rs  vault_integration.rs
src-tauri/tests/integration/: mod.rs  test_query.rs  test_search.rs  test_vault.rs
src/__tests__/: Editor.test.tsx  (+7 more)
(+66 files in other folders)
