[package]
name = "ledger"
version = "0.1.0"
description = "Developer Ledger MVP"
authors = ["Ledger"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.9"
fuzzy-matcher = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"

[lib]
name = "ledger_lib"
crate-type = ["lib", "cdylib", "staticlib"]
